[package]
name = "cimgui"
version = "0.1.0"
authors = ["Forest Sharp <forestcollinssharp@gmail.com>"]
edition = "2018"

[dependencies]
memoffset = "0.2.1"

[build-dependencies]
bindgen = "0.42.2"
cc = "1.0.25"

[dev-dependencies]
winit = "0.17"
glsl-to-spirv = "0.1"
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx.git", features = ["glsl-to-spirv"] }